[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"

[[bin]]
name = "02-1"
path = "src/02-1.rs"

[[bin]]
name = "02-2"
path = "src/02-2.rs"

[[bin]]
name = "03-1"
path = "src/03-1.rs"

[[bin]]
name = "03-2"
path = "src/03-2.rs"

[[bin]]
name = "05-1"
path = "src/05-1.rs"

[[bin]]
name = "05-2"
path = "src/05-2.rs"

[[bin]]
name = "06-2"
path = "src/06-2.rs"

[[bin]]
name = "08-1"
path = "src/08-1.rs"

[[bin]]
name = "08-2"
path = "src/08-2.rs"

[[bin]]
name = "09-1"
path = "src/09-1.rs"

[[bin]]
name = "09-2"
path = "src/09-2.rs"
