[package]
name = "advent-2023"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15.6"
rayon = "1.8.0"
regex = "1.10.2"

[[bin]]
name = "01-1"
path = "src/01-1.rs"

[[bin]]
name = "01-2"
path = "src/01-2.rs"

[[bin]]
name = "02-1"
path = "src/02-1.rs"

[[bin]]
name = "02-2"
path = "src/02-2.rs"

[[bin]]
name = "03-1"
path = "src/03-1.rs"

[[bin]]
name = "03-2"
path = "src/03-2.rs"

[[bin]]
name = "04-1"
path = "src/04-1.rs"

[[bin]]
name = "04-2"
path = "src/04-2.rs"

[[bin]]
name = "05-1"
path = "src/05-1.rs"

[[bin]]
name = "05-2"
path = "src/05-2.rs"

[[bin]]
name = "06-2"
path = "src/06-2.rs"

[[bin]]
name = "08-1"
path = "src/08-1.rs"

[[bin]]
name = "08-2"
path = "src/08-2.rs"

[[bin]]
name = "09-1"
path = "src/09-1.rs"

[[bin]]
name = "09-2"
path = "src/09-2.rs"

[[bin]]
name = "10-1"
path = "src/10-1.rs"

[[bin]]
name = "10-2"
path = "src/10-2.rs"

[[bin]]
name = "11-1"
path = "src/11-1.rs"

[[bin]]
name = "11-2"
path = "src/11-2.rs"

[[bin]]
name = "12-1"
path = "src/12-1.rs"

[[bin]]
name = "12-2"
path = "src/12-2.rs"

[[bin]]
name = "13-1"
path = "src/13-1.rs"

[[bin]]
name = "13-2"
path = "src/13-2.rs"

[[bin]]
name = "14-1"
path = "src/14-1.rs"

[[bin]]
name = "14-2"
path = "src/14-2.rs"

[[bin]]
name = "15-1"
path = "src/15-1.rs"

[[bin]]
name = "15-2"
path = "src/15-2.rs"

[[bin]]
name = "16-1"
path = "src/16-1.rs"

[[bin]]
name = "16-2"
path = "src/16-2.rs"

[[bin]]
name = "17-1"
path = "src/17-1.rs"

[[bin]]
name = "17-2"
path = "src/17-2.rs"

[[bin]]
name = "18-1"
path = "src/18-1.rs"

[[bin]]
name = "18-2"
path = "src/18-2.rs"

[[bin]]
name = "19-1"
path = "src/19-1.rs"

[[bin]]
name = "19-2"
path = "src/19-2.rs"

[[bin]]
name = "21-1"
path = "src/21-1.rs"

[[bin]]
name = "21-2"
path = "src/21-2.rs"

[[bin]]
name = "22-1"
path = "src/22-1.rs"

[[bin]]
name = "22-2"
path = "src/22-2.rs"

[[bin]]
name = "23-1"
path = "src/23-1.rs"

[[bin]]
name = "23-2"
path = "src/23-2.rs"
